# synapse-mcp

./: AGENTS.md  CHANGELOG.md  CLAUDE.md  README.md  fix_install.py  install.bat  install.sh  install_angr.bat  install_angr.py  pyproject.toml  test_libpersona_http.py  test_libpersona_integration.out  test_libpersona_integration.py  test_libpersona_robust.py
.github/workflows/: idalib-tests.yml
archived_idalib_daemon/: idalib_session_manager.py
devdocs/: hybrid-workflows.md  idalib-headless-validation-gate.md  idalib-heavy-idb-gate-tests.md  miasm-integration.md  triton-integration.md
mcp-client-configs/: kilo-code.json
plans/: phase7-mcp-reliability-and-workflow.md
profiles/: readonly.txt  triage.txt
skills/angr-symbolic-exec/: SKILL.md
skills/api-hook-analysis/: SKILL.md
skills/binary-survey/: SKILL.md
skills/construct-format-parsing/: SKILL.md
skills/crypto-constant-hunter/: SKILL.md
skills/debugger-trace/: SKILL.md
skills/function-deep-dive/: SKILL.md
skills/hybrid-deobfuscate/: SKILL.md
skills/miasm-ir-analysis/: SKILL.md
skills/stripped-binary-recovery/: SKILL.md
skills/triton-symbolic-exec/: SKILL.md
skills/vuln-hunter-static/: SKILL.md
src/ida_pro_mcp/: ida_mcp.py  idalib_server.py  idalib_session_manager.py  idalib_supervisor.py  installer.py  installer_data.py  server.py
src/ida_pro_mcp/ida_mcp/: __init__.py  _sigmaker.py  angr_ipc.py  angr_worker.py  api_analysis.py  api_angr.py  api_composite.py  api_construct.py  api_core.py  api_cstruct.py  api_debug.py  api_discovery.py  api_elf.py  api_filetype.py  api_flirt.py  api_lief.py  api_memory.py  api_miasm.py  api_modify.py  api_networkx.py  api_numpy.py  api_python.py  api_recon.py  api_resources.py  api_sigmaker.py  api_stack.py  api_survey.py  api_tasks.py  api_triton.py  api_types.py  api_unicorn.py  api_xor.py  api_yara.py  arg_aliases.py  compat.py  cross_ref.py  discovery.py  http.py  numpy_compat.py  rpc.py  (+4 more)
src/ida_pro_mcp/ida_mcp/tests/: __init__.py  test_api_analysis.py  test_api_angr.py  test_api_composite.py  test_api_construct.py  test_api_core.py  test_api_elf.py  test_api_lief.py  test_api_miasm.py  test_api_modify.py  test_api_networkx.py  test_api_numpy.py  test_api_triton.py  test_api_types.py  test_api_types_visitor.py  test_api_unicorn.py  test_api_xor.py  test_api_yara.py  test_hybrid.py  test_utils.py
src/ida_pro_mcp/ida_mcp/zeromcp/: jsonrpc.py  mcp.py
tests/: test_api_construct.py  test_api_cstruct.py  test_api_filetype.py  test_idalib_supervisor.py  test_idalib_supervisor_hardening.py  test_phase3_stress.py  test_task_backend.py
