[project]
name = "ida-pro-triton-miasm-mcp"
version = "1.0.0"
description = "IDA Pro MCP server with built-in Triton symbolic execution and Miasm IR analysis"
readme = "README.md"
requires-python = ">=3.11"
authors = [
    { name = "mrexodia" },
    { name = "can1357" },
    { name = "IDA Pro MCP Contributors" },
]
keywords = ["ida", "mcp", "llm", "plugin", "triton", "miasm", "symbolic-execution"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Operating System :: MacOS",
    "Operating System :: Microsoft :: Windows",
]
dependencies = [
    "idapro>=0.0.9",
    "tomli-w>=1.0.0",
]

[project.optional-dependencies]
triton = ["triton-library>=0.10.0"]
miasm  = ["miasm>=0.1.5", "future>=0.18.0"]
all    = ["triton-library>=0.10.0", "miasm>=0.1.5", "future>=0.18.0"]

[dependency-groups]
dev = [
    "coverage>=7.13.4",
    "jsonschema>=4.0",
    "mcp>=1.0",
]

[project.urls]
Repository = "https://github.com/CloudyTabzy/ida-pro-triton-miasm-mcp"
Issues = "https://github.com/CloudyTabzy/ida-pro-triton-miasm-mcp/issues"
Upstream = "https://github.com/mrexodia/ida-pro-mcp"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project.scripts]
ida-pro-mcp = "ida_pro_mcp.server:main"
ida-triton-miasm-mcp = "ida_pro_mcp.server:main"
ida-pro-mcp-enhanced = "ida_pro_mcp.server:main"
idalib-mcp = "ida_pro_mcp.idalib_supervisor:main"
ida-mcp-test = "ida_pro_mcp.test:main"
ida-mcp-trace-dump = "ida_pro_mcp.trace_dump:main"

[tool.pyright]
include = ["src/ida_pro_mcp"]

[tool.ruff]
exclude = ["src/ida_pro_mcp/ida_mcp/zeromcp/*.py"]

[tool.coverage.run]
relative_files = true
include = ["src/ida_pro_mcp/*"]
omit = [
    "src/ida_pro_mcp/ida_mcp/tests/*",
    "src/ida_pro_mcp/ida_mcp/zeromcp/*",
]
